Added Blog and Barn Talk

--- a/news.html
+++ b/news.html
@@ -29,9 +29,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="academic.html">Academic</a></li>
-							<li><a href="photos.html">Creative</a></li>
-							<li><a href="news.html">News</a></li>
+							<li><a href="academic.html">The Wolf and I</a></li>
+							<li><a href="photos.html">Story Boards</a></li>
+							<li><a href="barntalk.html">Barn Talk</a></li>
 							<li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
@@ -40,7 +40,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>News and Events</h1>
+								<h1>My (Almost) Daily Blog</h1>
 							</header>
 						<!--	<div class="content">
 								<p>A responsive site template designed by HTML5 UP<br />
