--- a/academic.html
+++ b/academic.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -29,9 +30,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="academic.html">Academic</a></li>
-							<li><a href="photos.html">Creative</a></li>
-							<li><a href="news.html">News</a></li>
+							<li><a href="academic.html">The Wolf and I</a></li>
+							<li><a href="photos.html">Story Boards</a></li>
+							<li><a href="barntalk.html">Barn Talk</a></li>
 							<li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
@@ -57,7 +58,7 @@
 
 						
 
-						<h1 id="custom-h1">Academic</h1>
+						<h1 id="custom-h1">The Wolf and I: A Journey of the Heart and Mind</h1>
 
 							<div class="Grid">
 								<div class="Grid-cell">
