--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -29,9 +30,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="academic.html">Academic</a></li>
-							<li><a href="photos.html">Creative</a></li>
-							<li><a href="news.html">News</a></li>
+							<li><a href="academic.html">The Wolf and I</a></li>
+							<li><a href="photos.html">Story Boards</a></li>
+							<li><a href="barntalk.html">Barn Talk</a></li>
 							<li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
@@ -62,7 +63,7 @@
 										<img src="images/wolf.jpg" alt="wolf" />
 									</span>
 									<header class="major">
-										<h3><a href="academic.html" class="link">Academic</a></h3>
+										<h3><a href="academic.html" class="link">The Wolf and I: A Journey of the Heart and Mind</a></h3>
 									</header>
 								</article>
 								<article>
@@ -70,7 +71,15 @@
 										<img src="images/duck.jpg" alt="duck" />
 									</span>
 									<header class="major">
-										<h3><a href="photos.html" class="link">Creative</a></h3>
+										<h3><a href="photos.html" class="link">Story Boards</a></h3>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/barntalk.jpg" alt="duck" />
+									</span>
+									<header class="major">
+										<h3><a href="bbb.html" class="link">Barn Talk</a></h3>
 									</header>
 								</article>
 							</section>
