forgot to change link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 										<img src="images/barntalk.jpg" alt="duck" />
 									</span>
 									<header class="major">
-										<h3><a href="bbb.html" class="link">Barn Talk</a></h3>
+										<h3><a href="barntalk.html" class="link">Barn Talk</a></h3>
 									</header>
 								</article>
 							</section>
