--- a/blog.html
+++ b/blog.html
@@ -43,19 +43,41 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">August 7, 2019</span>
-									<h2><a href="posts/post6.html">Feather Love</a></h2>
-									<p>"I hope you love birds, too. It is economical. It saves going to heaven."<br />
-									-Emily Dickinson</p>
+									<span class="date">September 2, 2019</span>
+									<h2><a href="posts/post8.html">End of Summer</a></h2>
+									<p>Yesterday I saw a boy wearing a hoodie. I said to myself, it’s official, summer is ending.</p>
 								</header>
-								<a href="posts/post6.html" class="image main"><img src="images/blog_images/fulls/post6cover.jpg" alt="" /></a>
+								<a href="posts/post8.html" class="image main"><img src="images/blog_images/fulls/post8cover.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="posts/post6.html" class="button large">Read More</a></li>
+									<li><a href="posts/post8.html" class="button large">Read More</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">September 1, 2019</span>
+										<h2><a href="posts/post7.html">Eventide</a></h2>
+										<p>The evening and its activities are by far the best part of the day for me.</p>
+									</header>
+									<a href="posts/post7.html" class="image main"><img src="images/blog_images/fulls/post7cover.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="posts/post7.html" class="button">Read More</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">August 7, 2019</span>
+										<h2><a href="posts/post6.html">Feather Love</a></h2>
+										<p>"I hope you love birds, too. It is economical. It saves going to heaven."<br />
+										-Emily Dickinson</p>
+									</header>
+									<a href="posts/post6.html" class="image main"><img src="images/blog_images/fulls/post6cover.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="posts/post6.html" class="button large">Read More</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">August 3, 2019</span>
