--- a/blog.html
+++ b/blog.html
@@ -43,18 +43,40 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">September 2, 2019</span>
-									<h2><a href="posts/post8.html">End of Summer</a></h2>
-									<p>Yesterday I saw a boy wearing a hoodie. I said to myself, it’s official, summer is ending.</p>
+									<span class="date">October 2, 2019</span>
+									<h2><a href="posts/post10.html">The Gunflint Trail</a></h2>
+									<p>By Ben the Dog Smith</p>
 								</header>
-								<a href="posts/post8.html" class="image main"><img src="images/blog_images/fulls/post8cover.jpg" alt="" /></a>
+								<a href="posts/post10.html" class="image main"><img src="images/blog_images/fulls/post10cover.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="posts/post8.html" class="button large">Read More</a></li>
+									<li><a href="posts/post10.html" class="button large">Read More</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">October 1, 2019</span>
+										<h2><a href="posts/post9.html">Monarchs and Swallowtails</a></h2>
+										<p>The evening and its activities are by far the best part of the day for me.</p>
+									</header>
+									<a href="posts/post9.html" class="image main"><img src="images/blog_images/fulls/post9cover.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="posts/post9.html" class="button">Read More</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">September 2, 2019</span>
+										<h2><a href="posts/post8.html">End of Summer</a></h2>
+										<p>Yesterday I saw a boy wearing a hoodie. I said to myself, it’s official, summer is ending.</p>
+									</header>
+									<a href="posts/post8.html" class="image main"><img src="images/blog_images/fulls/post8cover.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="posts/post8.html" class="button">Read More</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">September 1, 2019</span>
@@ -123,7 +145,7 @@
 										<span class="date">July 28, 2019</span>
 										<h2><a href="posts/post2.html">Tornado!</a></h2>
 									</header>
-									<a href="posts/post2.html" class="image fit"><img src="" alt="" /></a>
+									<a href="posts/post2.html" class="image fit"><img src="images/blog_images/fulls/post2cover.jpg" alt="" /></a>
 									<p>Downed power lines and trees all around central Minnesota and the local area
 									surrounding Ravensfield Farm, but we were spared from all damage.</p>
 									<ul class="actions special">
