--- a/barntalk.html
+++ b/barntalk.html
@@ -87,7 +87,7 @@
 								</article>
 
 								<article class="category_link thumb span-2">
-									<h3>Spilsh Splash: Koi Musings</h3>
+									<h3>Splish Splash: Koi Musings</h3>
 									<a href="#" class="image_bbb"><img src="images/thumbs/koi_musings.jpg" alt=""></a>
 								</article>
 
