--- a/blog.html
+++ b/blog.html
@@ -43,13 +43,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">March 28, 2020</span>
-									<h2><a href="posts/post12.html">The First Signs of Spring</a></h2>
-									<p>As we shelter in place</p>
+									<span class="date">April 9, 2020</span>
+									<h2><a href="posts/post13.html">The First Signs of Spring, Part Two</a></h2>
+									<p>It was time to open the doors that had been shut all winter...</p>
 								</header>
-								<a href="posts/post12.html" class="image main"><img src="images/blog_images/fulls/post12cover.jpeg" alt="" /></a>
+								<a href="posts/post13.html" class="image main" style="width: 50%; margin-left: 12em;"><img src="images/blog_images/fulls/post13cover.jpeg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="posts/post12.html" class="button large">Read More</a></li>
+									<li><a href="posts/post13.html" class="button large">Read More</a></li>
 								</ul>
 							</article>
 
@@ -57,8 +57,19 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">March 28, 2020</span>
+										<h2><a href="posts/post12.html">The First Signs of Spring</a></h2>
+										<p>As we shelter in place</p>
+									</header>
+									<a href="posts/post12.html" class="image main"><img src="images/blog_images/fulls/post12cover.jpeg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="posts/post12.html" class="button large">Read More</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">March 22, 2020</span>
-										<h2><a href="posts/post11.html">The Best, Yet Hardest Gift</a></h2>
+										<h2><a href="posts/post11.html">The Hardest Gift</a></h2>
 										<p>It is the best gift we can give to our beloved pets.</p>
 									</header>
 									<a href="posts/post11.html" class="image main"><img src="images/blog_images/fulls/post11cover.jpeg" alt="" /></a>
