--- a/barntalk.html
+++ b/barntalk.html
@@ -78,7 +78,7 @@
 
 								<article class="category_link thumb span-1">
 									<h3>Cat Whispers</h3>
-									<a href="#" class="image_bbb"><img src="images/thumbs/cat_whispers.jpg" alt=""></a>
+									<a href="blog_cats.html" class="image_bbb"><img src="images/thumbs/cat_whispers.jpg" alt=""></a>
 								</article>
 
 								<article class="category_link thumb span-1">
