--- a/blog.html
+++ b/blog.html
@@ -56,12 +56,12 @@
 						<!-- Posts -->
 							<section class="posts">
 								<article class="post featured">
-									<header class="major">
+									<header>
 										<span class="date">April 9, 2020</span>
 										<h2><a href="posts/post13.html">The First Signs of Spring, Part Two</a></h2>
 										<p>It was time to open the doors that had been shut all winter...</p>
 									</header>
-									<a href="posts/post13.html" class="image main" style="width: 50%; margin-left: 12em;"><img src="images/blog_images/fulls/post13cover.jpeg" alt="" /></a>
+									<a href="posts/post13.html" class="image main"><img src="images/blog_images/fulls/post13cover.jpeg" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="posts/post13.html" class="button large">Read More</a></li>
 									</ul>
