--- a/blog.html
+++ b/blog.html
@@ -43,19 +43,52 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">Septempber 28, 2021</span>
-									<h2><a href="posts/post14.html">Cranes</a></h2>
-									<p>It may not be magic, but it is magical.</p>
+									<span class="date">January 18, 2022</span>
+									<h2><a href="posts/post17.html">Oliver: The Tale of a Cat's Dog</a></h2>
+									<p>You’ve probably heard the phrase, “a dog’s dog.” Well, we have a cat’s dog, and his name is Oliver.</p>
 								</header>
-								<a href="posts/post14.html" class="image main" style="width: 50%; margin-left: 12em;"><img src="images/blog_images/fulls/post14cover.jpeg" alt="" /></a>
+								<a href="posts/post17.html" class="image main"><img src="images/blog_images/fulls/post17cover.jpeg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="posts/post14.html" class="button large">Read More</a></li>
+									<li><a href="posts/post17.html" class="button large">Read More</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
-								<article class="post featured">
+								<article>
+									<header>
+										<span class="date">January 9, 2022</span>
+										<h2><a href="posts/post16.html">Color Therapy</a></h2>
+										<p>A moving, living canvas glides from one image into another. Thirteen Koi—thirteen friends swim to the pool’s edge and greet me.</p>
+									</header>
+									<a href="posts/post16.html" class="image main"><img src="images/blog_images/fulls/post16cover.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="posts/post16.html" class="button large">Read More</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">December 28, 2021</span>
+										<h2><a href="posts/post15.html">Minnesota Winters</a></h2>
+										<p>In my fireplace the good cedar logs are burning and crackling...</p>
+									</header>
+									<a href="posts/post15.html" class="image main"><img src="images/blog_images/fulls/post15cover.jpeg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="posts/post15.html" class="button large">Read More</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">Septempber 28, 2021</span>
+										<h2><a href="posts/post14.html">Cranes</a></h2>
+										<p>It may not be magic, but it is magical.</p>
+									</header>
+									<a href="posts/post14.html" class="image main"><img src="images/blog_images/fulls/post14cover.jpeg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="posts/post14.html" class="button large">Read More</a></li>
+									</ul>
+								</article>
+								<article>
 									<header>
 										<span class="date">April 9, 2020</span>
 										<h2><a href="posts/post13.html">The First Signs of Spring, Part Two</a></h2>
