--- a/blog.html
+++ b/blog.html
@@ -43,18 +43,40 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">January 18, 2022</span>
-									<h2><a href="posts/post17.html">Oliver: The Tale of a Cat's Dog</a></h2>
-									<p>You’ve probably heard the phrase, “a dog’s dog.” Well, we have a cat’s dog, and his name is Oliver.</p>
+									<span class="date">February 16, 2022</span>
+									<h2><a href="posts/post19.html">A New Tenant</a></h2>
+									<p>We have a new tenant at Ravensfield Farm...</p>
 								</header>
-								<a href="posts/post17.html" class="image main"><img src="images/blog_images/fulls/post17cover.jpeg" alt="" /></a>
+								<a href="posts/post19.html" class="image main"><img src="images/blog_images/fulls/post19cover.jpg" style="width: 50%; margin-left: auto; margin-right: auto;" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="posts/post17.html" class="button large">Read More</a></li>
+									<li><a href="posts/post19.html" class="button large">Read More</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">February 16, 2022</span>
+										<h2><a href="posts/post18.html">Ode to a Mailbox</a></h2>
+										<p>Have you ever thought about rural mailboxes that line the highways and side roads?</p>
+									</header>
+									<a href="posts/post18.html" class="image main"><img src="images/blog_images/fulls/post18cover.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="posts/post18.html" class="button large">Read More</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">January 18, 2022</span>
+										<h2><a href="posts/post17.html">Oliver: The Tale of a Cat's Dog</a></h2>
+										<p>You’ve probably heard the phrase, “a dog’s dog.” Well, we have a cat’s dog, and his name is Oliver.</p>
+									</header>
+									<a href="posts/post17.html" class="image main"><img src="images/blog_images/fulls/post17cover.jpeg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="posts/post17.html" class="button large">Read More</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">January 9, 2022</span>
